# countergan

./: .gitignore  README.md  pyproject.toml  ruff.toml  ty.toml
example/: classifier_tf.py  classifier_torch.py  example.py  example_utils.py
src/countergan/: __init__.py  _backend.py  countergan.py
src/countergan/backends/: __init__.py  _tensorflow.py  _torch.py
