[project]
name = "countergan"
version = "0.1.0"
description = "CounteRGAN: counterfactual generation with GANs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
tensorflow = ["tensorflow>=2.16,<3", "keras>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/countergan"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
example = [
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]
